<resources>
    <string name="app_name">Math Game</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="studentId">Student ID: 20200608</string>
    <string name="studentName">Student Name: D.G.Pasindu Akalpa</string>
    <string name="message">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.</string>
    <string name="close">CLOSE</string>
    <string name="closeBtn">Close Button Image</string>
    <string name="ex1">Expression 1</string>
    <string name="ex2">Expression 2</string>
    <string name="greater">GREATER</string>
    <string name="et">==</string>
    <string name="less">LESS</string>
    <string name="correct">CORRECT</string>
    <string name="wrong">WRONG</string>
    <string name="timerPlaceHolder">00</string>
    <string name="muteBtn">Mute Button</string>
    <string name="question_count">Question Count🧮 :</string>
    <string name="game_over">Game Over!☠️</string>
    <string name="total_time_elapsed">Total Time Elapsed⏲️ :</string>
    <string name="correct_answer_count">Correct Answer Count✅ :</string>
    <string name="incorrect_answer_count">Incorrect Answer Count❎ :</string>
    <string name="timeAnswer">%1$d Sec.</string>
    <string name="qText">Above expression is ...... than/to below expression</string>
</resources>