<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="260dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:background="@null"
            android:contentDescription="@string/muteBtn"
            android:src="@drawable/ic_round_volume_up_48"
            android:tooltipText="@string/muteBtn"
            tools:targetApi="o" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/timerText"
                android:text="@string/timerPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/barTimer"
                app:layout_constraintEnd_toEndOf="@+id/barTimer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barTimer"
                app:layout_constraintVertical_bias="0.528" />

            <ProgressBar
                android:id="@+id/barTimer"
                style="?android:attr/progressBarStyleHorizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:max="10"
                android:progress="10"
                android:progressDrawable="@drawable/circular_progress_bar"
                tools:layout_editor_absoluteX="37dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvEx1"
            android:layout_width="wrap_content"
            android:text="@string/ex1"
            android:textSize="20sp"
            android:autoSizeTextType="uniform"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tvEx2"
            android:layout_width="wrap_content"
            android:text="@string/ex2"
            android:textSize="20sp"
            android:autoSizeTextType="uniform"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnGT"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/greater" />

        <Button
            android:id="@+id/btnET"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/et" />

        <Button
            android:id="@+id/btnLT"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/less" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="20sp" />

</LinearLayout>